--- a/Client/tests-app/src/components/Questions/question.css
+++ b/Client/tests-app/src/components/Questions/question.css
@@ -1,4 +1,4 @@
-.test-card {
+.question-card {
   width: 60%;
   /* max-width: 500px; */
   background-color: #fff;
@@ -7,7 +7,8 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.test-question {
+.question-question {
+  color: black;
   font-size: 20px;
   margin-bottom: 20px;
 }
@@ -19,5 +20,5 @@
   border-bottom: 2px solid #ddd;
   outline: none;
   font-size: 16px;
-  resize: vertical; /* разрешить вертикальное изменение размера */
+  resize: vertical;
 }
