--- a/Client/tests-app/src/components/Questions/question.css
+++ b/Client/tests-app/src/components/Questions/question.css
@@ -124,3 +124,151 @@
 .delete-button:hover {
   background-color: #ff1a1a;
 }
+
+.modal-content-questoin-create {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.left-section,
+.right-section {
+  width: 40%;
+}
+
+.input-field-descr {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: vertical;
+}
+
+.input-field {
+  width: 100%;
+  padding: 8px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.generate-button,
+.save-button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #0066cc;
+  color: white;
+  cursor: pointer;
+}
+
+.generate-button:hover,
+.save-button:hover {
+  background-color: #004999;
+}
+
+.open-modal-button {
+  padding: 10px 20px;
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.open-modal-button:hover {
+  background-color: #004999;
+}
+
+.error-message {
+  color: red;
+  font-size: 1.2em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.loading-message {
+  font-size: 1.2em;
+  text-align: center;
+  margin-top: 20px;
+  color: #666;
+}
+
+.question-card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 20px 0;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+}
+
+.question-label {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.question-question {
+  font-size: 1.2em;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.answer-section {
+  margin-top: 10px;
+}
+
+.answer-label {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.answer-p {
+  font-size: 1em;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.answer-input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1em;
+  margin-bottom: 10px;
+}
+
+.button {
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #004999;
+}
+
+.button:active {
+  background-color: #003366;
+}
+
+.delete-button {
+  background-color: #ff4d4d;
+}
+
+.delete-button:hover {
+  background-color: #ff1a1a;
+}
